--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">Quest6_030</string>
+    <string name="app_name">Praktikum8</string>
+    <string name="submit">Submit</string>
+    <string name="nama_lengkap">NAMA LENGKAP</string>
+    <string name="jenis_kelamin">JENIS KELAMIN</string>
+    <string name="alamat">ALAMAT</string>
+    <string name="tampil">Tampilan Data</string>
+    <string name="home">Form Isian</string>
+    <string name="back">Back</string>
+    <string name="laki">Laki Laki</string>
+    <string name="wanita">Wanita</string>
 </resources>
